fixed button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
   cursor: pointer;
   margin: 16px;
   padding: 8px 16px;
-  width: calc(100% - 4*16px);
+  width: calc(100% - 2*16px);
   font-size: 18px;
   outline: none;
   border: none;
